--- a/asurion_aspen_web/aspen_api/templates/aspen.html
+++ b/asurion_aspen_web/aspen_api/templates/aspen.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
-    <link rel="stylesheet" href="{% static 'aspen.css' %}">
-        <body>
-            <div class="top-nav">
-                <div class="main-title">Asurion Team Registry</div>
-            </div>
+<link rel="stylesheet" href="{% static 'aspen.css' %}">
 
-            <div class="search-container">
-                <div class="search">
-                    <form class="search-bar" method="GET" action=""  >
-                        <input class="search-term" type="search" placeholder="Search for a team..." name="search"> 
-                        <button type="submit" class="searchButton"> Search</button>
-                    </form>
-                </div>
+<body>
+    <div class="top-nav">
+        <div class="main-title">Asurion Team Registry</div>
+    </div>
+
+    <div class="search-container">
+        <div class="search">
+            <form class="search-bar" method="GET" action="">
+                <input class="search-term" type="search" placeholder="Search for a team..." name="search">
+                <button type="submit" class="searchButton"> Search</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="sort-text"><a>Sort A-Z</a> </div>
+    {% for i in team_list %}
+    <div class="card">
+        <div class="container">
+            <h2>{{i.name}}</h2>
+            <div class="row">
+                <div class="team-info-title">Mission Statement:</div>
+                <div class="mission-statement">{{i.mission_statement}}</div>
             </div>
-          
-            <div class="sort-text"><a>Sort A-Z</a> </div>
-            {% for i in team_list %}
-            <div class="card">
-                <div class="container">
-                    <h2>{{i.name}}</h2>
+            <div class="row">
+                <div class="column">
+                    <div class="team-info-title">Quick Links:</div>
                     <div class="row">
-                        <div class="team-info-title">Mission Statement:</div>
-                        <div class="mission-statement">This is a mission statement for this team</div>
-                    </div>
-                    <div class="row">
-                        <div class="column">
-                            <div class="team-info-title">Quick Links:</div>
-                            <div class="row">
-                                <a href="https://www.w3docs.com/" class="aui-button">Repository</a>
-                                <a href="google.com" class="aui-button">Notion</a>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <div class="team-info-title">Contact:</div>
-                            <p>Product Manager: {{i.product_manager}}</p>
-                            <p>Tech Lead: {{i.tech_lead}}</p>
-                            <p>Designer: {{i.designer}}</p>
-                        </div>
+                        <a href="https://www.w3docs.com/" class="aui-button">Repository</a>
                     </div>
                 </div>
+                <div class="column">
+                    <div class="team-info-title">Contact:</div>
+                    <p>Product Manager: {{i.product_manager}}</p>
+                    <p>Tech Lead: {{i.tech_lead}}</p>
+                    <p>Designer: {{i.designer}}</p>
+                </div>
             </div>
-            {% endfor %}
-        <body>
-    </html>
+            <div class="row">
+                <div class="team-info-title">
+                    Updates:
+                </div>
+                <p>{{i.updates}}</p>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+
+    <body>
+
+</html>
